--- a/oxo/Cargo.toml
+++ b/oxo/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 bio = "0.30.1"
 rust-htslib = "0.31.0"
 thiserror = "1.0.20"
+fishers_exact = "1.0.1"
 
 [dev-dependencies]
 walkdir = "2.3.1"
