--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "rustynuc"
 version = "0.1.0"
-authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
+authors = ["Johnny Debebe johnny.debebe@nottingham.ac.uk"]
 edition = "2018"
 publish = false
-
-[workspace]
-members = ["oxo"]
 
 [dependencies]
 niffler = "2.1.0"
 structopt = "0.3.14"
+bio = "0.30.1"
 rust-htslib = "0.31.0"
-oxo = { path = "oxo" }
+thiserror = "1.0.20"
+fishers_exact = "1.0.1"
 
 [dev-dependencies]
 predicates = "1.0.4"
 assert_cmd = "1.0.1"
+walkdir = "2.3.1"
