--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ bio = "0.30.1"
 rust-htslib = "0.31.0"
 thiserror = "1.0.20"
 fishers_exact = "1.0.1"
+log = "0.4.8"
+env_logger = "0.7.1"
 
 [dev-dependencies]
 predicates = "1.0.4"
