--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0.20"
 fishers_exact = "1.0.1"
 log = "0.4.8"
 env_logger = "0.7.1"
+rayon = "1.3.1"
 
 [dev-dependencies]
 predicates = "1.0.4"
