--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,26 @@ authors = ["Johnny Debebe johnny.debebe@nottingham.ac.uk"]
 edition = "2018"
 publish = false
 
+
+[dependencies.niffler]
+version = "2.2.0"
+default-features = false 
+features = ["gz"]
+
+[dependencies.rust-htslib]
+version = "0.31.0"
+default-features = false 
+
+[dependencies.env_logger]
+version = "0.7.1"
+default-features = false 
+
 [dependencies]
-niffler = "2.1.0"
 structopt = "0.3.14"
 bio = "0.30.1"
-rust-htslib = "0.31.0"
 thiserror = "1.0.20"
 fishers_exact = "1.0.1"
 log = "0.4.8"
-env_logger = "0.7.1"
 rayon = "1.3.1"
 
 [dev-dependencies]
