--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ rayon = "1.3.1"
 predicates = "1.0.4"
 assert_cmd = "1.0.1"
 walkdir = "2.3.1"
+criterion = "0.3.3"
+
+[[bench]]
+name = "benchmark"
+harness = false
+
