added crates.io info to TOML

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "rustynuc"
 version = "0.2.0"
 authors = ["Johnny Debebe johnny.debebe@nottingham.ac.uk"]
 edition = "2018"
-publish = false
+description = "Quick analysis of pileups for likely 8-oxoG locations"
+keywords = ["bioinformatics", "pileup", "OxoG", "8-oxoG", "bio"]
+categories = ["command-line-utilities"]
+license = "MIT"
+repository = "https://github.com/bjohnnyd/rustynuc"
+readme = "README.md"
+exclude = ["static/*"]
 
 [dependencies.niffler]
 version = "2.2.0"
