--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ predicates = "1.0.4"
 assert_cmd = "1.0.1"
 walkdir = "2.3.1"
 criterion = "0.3.3"
+regex = "1.4.2"
+lazy_static = "*"
 
 [[bench]]
 name = "benchmark"
