--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,8 +9,7 @@ jobs:
     name: shalzz/zola-deploy-action
     runs-on: ubuntu-latest
     steps:
-    # Checkout
-    - uses: actions/checkout@gh-pages
+    - uses: actions/checkout@master
     # Build & deploy
     - name: shalzz/zola-deploy-action
       uses: shalzz/zola-deploy-action@v0.12.0
