--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ categories = ["command-line-utilities"]
 license = "MIT"
 repository = "https://github.com/bjohnnyd/rustynuc"
 readme = "README.md"
-exclude = ["static/*", "justfile", ".github", ".git"]
+exclude = ["static/*", "justfile", ".github/*", ".git/*", "sass/*", "public/*", "content/*", "benches/*", "templates/*", "themes/*"]
 
 [dependencies.niffler]
 version = "2.2.0"
